--- a/index.html
+++ b/index.html
@@ -66,11 +66,17 @@
       "تحميل الصفحة جارٍ الآن..."
     ];
 
-    // روابط عشوائية لأماكن قبل التوجيه إلى Discord
+    // روابط حقيقية عشوائية (إضافات لتجنب الكشف)
     const randomPages = [
-      "https://www.example.com",
-      "https://www.randompage1.com",
-      "https://www.placeholderpage.com"
+      "https://www.bbc.com",
+      "https://www.wikipedia.org",
+      "https://www.reddit.com",
+      "https://www.nytimes.com",
+      "https://www.cnn.com",
+      "https://www.stackoverflow.com",
+      "https://www.amazon.com",
+      "https://www.medium.com",
+      "https://www.quora.com"
     ];
 
     // اختيار عشوائي من روابط ديسكورد المشفرة
